--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
         
            <p class="signup-link">
             You have an account? 
-             <a class="text-white" href="./login.html">Sign in</a>
+             <a class="text-white" href="./index.html">Sign in</a>
            </p>
         </div>
     </div>
